tests/recursions/ill-typed/divergent-param-and-return-types.stella
language core;

extend with #fixpoint-combinator;

fn main(n : Bool) -> Bool {
  return fix(
    fn( f : fn(Bool) -> Nat) {
      return fn (a : Bool) {
        return true
      }
    }
  )(n)
}
